using System;

using Domain.Entities.Enums;

namespace Domain.Entities;

public class WorkOrderLineItem : BaseEntity
{
    public required int WorkOrderID { get; set; }
    public required int InventoryItemID { get; set; }
    public required int ServiceTaskID { get; set; }
    public required LineItemTypeEnum ItemType { get; set; }
    public string? Description { get; set; }
    public required int Quantity { get; set; }
    public required decimal UnitCost { get; set; }
    public required decimal TotalCost { get; set; }
    public double? LaborHours { get; set; }

    // Navigation properties
    public required WorkOrder WorkOrder { get; set; }
    public required InventoryItem InventoryItem { get; set; }
    public required ServiceTask ServiceTask { get; set; }
}